--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--Created by GiMaker 2025-->
+<!--Partially from Vertyne account-->
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -19,7 +22,7 @@
             </div>
         </header>
         <main>
-            <p>This is a basic HTML structure for the Ketonal project.</p>
+            <p>Hello World</p>
         </main>
         <footer class="footer">
             <p>&copy; 2025 Ketonal Project</p>
