added difference color mode and images

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
@@ -22,7 +25,35 @@
             </div>
         </header>
         <main>
-            <p>Hello World</p>
+            <div class="mediapreview">
+                
+                <div class="media1">
+                    <img src="/src/1.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                </div>
+                <div class="media2">
+                    <img src="/src/2.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                </div>
+                <div class="media3">
+                    <img src="/src/3.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                </div>
+                <div class="media4">
+                    <img src="/src/4.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                </div>
+                <div class="media5">
+                    <img src="/src/5.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                </div>
+                <div class="media6">
+                    <img src="/src/6.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                </div>
+                <div class="media7">
+                    <img src="/src/7.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                </div>
+                <div class="media8">
+                    <img src="/src/8.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                </div>
+                <span class="mediaketonal">Ketonal</span>
+            </div>
+            <h1>qq</h1>
         </main>
         <footer class="footer">
             <p>&copy; 2025 Ketonal Project</p>
