--- a/index.html
+++ b/index.html
@@ -25,34 +25,36 @@
             </div>
         </header>
         <main>
-            <div class="mediapreview">
-                
-                <div class="media1">
-                    <img src="/src/1.png" alt="Screenshot of ketonal" class="bg" height="300px">
+            <section id="scroll-block">
+                <div class="mediapreview">
+                    
+                    <div class="media1">
+                        <img src="/src/1.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                    </div>
+                    <div class="media2">
+                        <img src="/src/2.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                    </div>
+                    <div class="media3">
+                        <img src="/src/3.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                    </div>
+                    <div class="media4">
+                        <img src="/src/4.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                    </div>
+                    <div class="media5">
+                        <img src="/src/5.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                    </div>
+                    <div class="media6">
+                        <img src="/src/6.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                    </div>
+                    <div class="media7">
+                        <img src="/src/7.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                    </div>
+                    <div class="media8">
+                        <img src="/src/8.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                    </div>
+                    <span class="mediaketonal">Ketonal</span>
                 </div>
-                <div class="media2">
-                    <img src="/src/2.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                </div>
-                <div class="media3">
-                    <img src="/src/3.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                </div>
-                <div class="media4">
-                    <img src="/src/4.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                </div>
-                <div class="media5">
-                    <img src="/src/5.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                </div>
-                <div class="media6">
-                    <img src="/src/6.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                </div>
-                <div class="media7">
-                    <img src="/src/7.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                </div>
-                <div class="media8">
-                    <img src="/src/8.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                </div>
-                <span class="mediaketonal">Ketonal</span>
-            </div>
+            </section>
             <h1>qq</h1>
         </main>
         <footer class="footer">
