--- a/index.html
+++ b/index.html
@@ -19,9 +19,26 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <script>
+            function myFunction() {
+                const copyText = document.getElementById("iptext").innerText;
+                navigator.clipboard.writeText(copyText).then(() => {
+                    alert("Copied the text: " + copyText);
+                });
+            }
+        </script>
+
+
+
         <header class="header">
             <div class="logo">
                 <img src="/src/ketonal.png" alt="Ketonal Logo" height="30">
+            </div>
+            <div class="ipbox">
+                <span class="ip" id="iptext">ket0nal.ru</span>
+                <button onclick="myFunction()" class="copy-button">
+                    <img src="/src/copy.png" alt="Copy IP" height="20" class="copy-icon">
+                </button>
             </div>
         </header>
         <main>
@@ -55,7 +72,10 @@
                     <span class="mediaketonal">Ketonal</span>
                 </div>
             </section>
-            <h1>qq</h1>
+            <div class="description">
+                <span class="description-text">Майнкрафт сервер</span>
+                <hr class="solid">
+            </div>       
         </main>
         <footer class="footer">
             <p>&copy; 2025 Ketonal Project</p>
