--- a/index.html
+++ b/index.html
@@ -23,27 +23,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-<script>
-    function myFunction() {
-        const copyText = document.getElementById("iptext").innerText;
-        navigator.clipboard.writeText(copyText).then(() => {
-            alert("Copied the text: " + copyText);
-        });
-    }
-</script>
-
-
 <header class="header">
     <div class="logo">
         <img src="/src/ketonal.png" alt="Ketonal Logo" height="60">
     </div>
-    <div class="ipbox">
-        <span class="ip" id="iptext">ket0nal.ru</span>
-        <button onclick="myFunction()" class="copy-button">
-            <img src="/src/copy.png" alt="Copy IP" height="20" class="copy-icon">
-        </button>
+    <div class="ip-box" id="ipBox">
+        <span class="ip-text">play.ket0nal.ru</span>
+        <div class="copy-icon">
+            <i class="fas fa-copy"></i>
+        </div>
     </div>
 </header>
 <main>
@@ -82,6 +73,22 @@
         <hr class="solid">
     </div>
 </main>
+<script>
+    const ipBox = document.getElementById('ipBox');
+    const ipText = ipBox.querySelector('.ip-text');
+    ipBox.addEventListener('click', () => {
+        console.log(213)
+        navigator.clipboard.writeText(ipText.textContent);
+        ipBox.classList.add('success');
+        const pulse = document.createElement('div');
+        pulse.classList.add('pulse');
+        ipBox.appendChild(pulse);
+        setTimeout(() => {
+            ipBox.classList.remove('success');
+            pulse.remove();
+        }, 1500);
+    });
+</script>
 <footer class="footer">
     <div class="footer-container">
         <div class="footer-left">
