--- a/index.html
+++ b/index.html
@@ -2,83 +2,114 @@
 <!--Partially from Vertyne account-->
 
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ketonal</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <script>
-            function myFunction() {
-                const copyText = document.getElementById("iptext").innerText;
-                navigator.clipboard.writeText(copyText).then(() => {
-                    alert("Copied the text: " + copyText);
-                });
-            }
-        </script>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ketonal</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+    
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap"
+          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap"
+          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="index.css">
+</head>
 
+<body>
+<header class="header">
+    <div class="logo">
+        <img src="/src/ketonal.png" alt="Ketonal Logo" class="logo-img">
+    </div>
+    <div class="ip-box" id="ipBox">
+        <span class="ip-text">mc.ket0nal.ru</span>
+        <div class="copy-icon">
+            <i class="fas fa-copy"></i>
+        </div>
+    </div>
+</header>
+<main>
+    <section id="scroll-block">
+        <div class="mediapreview">
 
-
-        <header class="header">
+            <div class="media1">
+                <img src="/src/1.png" alt="Screenshot of ketonal" class="bg" height="300px">
+            </div>
+            <div class="media2">
+                <img src="/src/2.png" alt="Screenshot of ketonal" class="bg" height="300px">
+            </div>
+            <div class="media3">
+                <img src="/src/3.png" alt="Screenshot of ketonal" class="bg" height="300px">
+            </div>
+            <div class="media4">
+                <img src="/src/4.png" alt="Screenshot of ketonal" class="bg" height="300px">
+            </div>
+            <div class="media5">
+                <img src="/src/5.png" alt="Screenshot of ketonal" class="bg" height="300px">
+            </div>
+            <div class="media6">
+                <img src="/src/6.png" alt="Screenshot of ketonal" class="bg" height="300px">
+            </div>
+            <div class="media7">
+                <img src="/src/7.png" alt="Screenshot of ketonal" class="bg" height="300px">
+            </div>
+            <div class="media8">
+                <img src="/src/8.png" alt="Screenshot of ketonal" class="bg" height="300px">
+            </div>
+            <span class="mediaketonal">Ketonal</span>
+        </div>
+    </section>
+    <div class="description">
+        <span class="description-text">Майнкрафт сервер</span>
+        <hr class="solid">
+    </div>
+</main>
+<script>
+    const ipBox = document.getElementById('ipBox');
+    const ipText = ipBox.querySelector('.ip-text');
+    ipBox.addEventListener('click', () => {
+        console.log(213)
+        navigator.clipboard.writeText(ipText.textContent);
+        ipBox.classList.add('success');
+        const pulse = document.createElement('div');
+        pulse.classList.add('pulse');
+        ipBox.appendChild(pulse);
+        setTimeout(() => {
+            ipBox.classList.remove('success');
+            pulse.remove();
+        }, 1500);
+    });
+</script>
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer-left">
             <div class="logo">
-                <img src="/src/ketonal.png" alt="Ketonal Logo" height="30">
+                © 2025 <strong>Kentonal Project</strong>
             </div>
-            <div class="ipbox">
-                <span class="ip" id="iptext">ket0nal.ru</span>
-                <button onclick="myFunction()" class="copy-button">
-                    <img src="/src/copy.png" alt="Copy IP" height="20" class="copy-icon">
-                </button>
+            <div class="disclaimer">
+                Мы никак не связаны с Minecraft®, Mojang Studios® или Microsoft®.
             </div>
-        </header>
-        <main>
-            <section id="scroll-block">
-                <div class="mediapreview">
-                    
-                    <div class="media1">
-                        <img src="/src/1.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                    </div>
-                    <div class="media2">
-                        <img src="/src/2.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                    </div>
-                    <div class="media3">
-                        <img src="/src/3.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                    </div>
-                    <div class="media4">
-                        <img src="/src/4.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                    </div>
-                    <div class="media5">
-                        <img src="/src/5.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                    </div>
-                    <div class="media6">
-                        <img src="/src/6.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                    </div>
-                    <div class="media7">
-                        <img src="/src/7.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                    </div>
-                    <div class="media8">
-                        <img src="/src/8.png" alt="Screenshot of ketonal" class="bg" height="300px">
-                    </div>
-                    <span class="mediaketonal">Ketonal</span>
-                </div>
-            </section>
-            <div class="description">
-                <span class="description-text">Майнкрафт сервер</span>
-                <hr class="solid">
-            </div>       
-        </main>
-        <footer class="footer">
-            <p>&copy; 2025 Ketonal Project</p>
-        </footer>
-    </body>
+        </div>
+        <div class="social-buttons">
+            <a class="social-btn discord-btn" href="https://discord.gg/YtrczGpanH" target="_blank">
+                <svg viewBox="0 0 24 24">
+                    <path d="M14.82 4.26a10.14 10.14 0 0 0-.53 1.1 14.66 14.66 0 0 0-4.58 0 10.14 10.14 0 0 0-.53-1.1 16 16 0 0 0-4.13 1.3 17.33 17.33 0 0 0-3 11.59 16.6 16.6 0 0 0 5.07 2.59A12.89 12.89 0 0 0 8.23 18a9.65 9.65 0 0 1-1.71-.83 3.39 3.39 0 0 0 .42-.33 11.66 11.66 0 0 0 10.12 0q.21.18.42.33a10.84 10.84 0 0 1-1.71.84 12.41 12.41 0 0 0 1.08 1.78 16.44 16.44 0 0 0 5.06-2.59 17.22 17.22 0 0 0-3-11.59 16.09 16.09 0 0 0-4.09-1.35zM8.68 14.81a1.94 1.94 0 0 1-1.8-2 1.93 1.93 0 0 1 1.8-2 1.93 1.93 0 0 1 1.8 2 1.93 1.93 0 0 1-1.8 2zm6.64 0a1.94 1.94 0 0 1-1.8-2 1.93 1.93 0 0 1 1.8-2 1.92 1.92 0 0 1 1.8 2 1.92 1.92 0 0 1-1.8 2z"/>
+                </svg>
+            </a>
+
+            <a class="social-btn youtube-btn">
+                <svg viewBox="0 0 24 24">
+                    <path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/>
+                </svg>
+            </a>
+        </div>
+    </div>
+</footer>
+
+</body>
 </html>
