Added glassy effect to header

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <div class="logo">
         <img src="/src/ketonal.png" alt="Ketonal Logo" class="logo-img">
     </div>
-    <div class="ip-box" id="ipBox">
+<!--    <div class="ip-box" id="ipBox">
         <span class="ip-text">mc.ket0nal.ru</span>
         <div class="copy-icon">
             <i class="fas fa-copy"></i>
         </div>
-    </div>
+    </div> -->
 </header>
 <main>
     <section id="scroll-block">
@@ -89,7 +89,7 @@
     <div class="footer-container">
         <div class="footer-left">
             <div class="logo">
-                © 2025 <strong>Kentonal Project</strong>
+                © 2025 Kentonal Project
             </div>
             <div class="disclaimer">
                 Мы никак не связаны с Minecraft®, Mojang Studios® или Microsoft®.
