Fix Pages path error

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 
         <header class="header">
             <div class="logo">
-                <img src="/src/ketonal.png" alt="Ketonal Logo" height="30">
+                <img src="src/ketonal.png" alt="Ketonal Logo" height="30">
             </div>
             <div class="ipbox">
                 <span class="ip" id="iptext">ket0nal.ru</span>
                 <button onclick="myFunction()" class="copy-button">
-                    <img src="/src/copy.png" alt="Copy IP" height="20" class="copy-icon">
+                    <img src="src/copy.png" alt="Copy IP" height="20" class="copy-icon">
                 </button>
             </div>
         </header>
@@ -46,28 +46,28 @@
                 <div class="mediapreview">
                     
                     <div class="media1">
-                        <img src="/src/1.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                        <img src="src/1.png" alt="Screenshot of ketonal" class="bg" height="300px">
                     </div>
                     <div class="media2">
-                        <img src="/src/2.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                        <img src="src/2.png" alt="Screenshot of ketonal" class="bg" height="300px">
                     </div>
                     <div class="media3">
-                        <img src="/src/3.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                        <img src="src/3.png" alt="Screenshot of ketonal" class="bg" height="300px">
                     </div>
                     <div class="media4">
-                        <img src="/src/4.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                        <img src="src/4.png" alt="Screenshot of ketonal" class="bg" height="300px">
                     </div>
                     <div class="media5">
-                        <img src="/src/5.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                        <img src="src/5.png" alt="Screenshot of ketonal" class="bg" height="300px">
                     </div>
                     <div class="media6">
-                        <img src="/src/6.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                        <img src="src/6.png" alt="Screenshot of ketonal" class="bg" height="300px">
                     </div>
                     <div class="media7">
-                        <img src="/src/7.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                        <img src="src/7.png" alt="Screenshot of ketonal" class="bg" height="300px">
                     </div>
                     <div class="media8">
-                        <img src="/src/8.png" alt="Screenshot of ketonal" class="bg" height="300px">
+                        <img src="src/8.png" alt="Screenshot of ketonal" class="bg" height="300px">
                     </div>
                     <span class="mediaketonal">Ketonal</span>
                 </div>
