--- a/index.html
+++ b/index.html
@@ -3,118 +3,183 @@
 
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ketonal</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+<div class="container">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Ketonal</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap"
-          rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap"
-          rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
-          rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="index.css">
-</head>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap"
+              rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap"
+              rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+              rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <link rel="stylesheet" href="index.css">
+    </head>
 
-<body>
-<header class="header">
-    <div class="header-left">
-        <div class="logo">
-            <img src="/src/ketonal.png" alt="Ketonal Logo" class="logo-img">
-        </div>
-
-        <nav class="nav-menu">
-            <a href="#about" class="nav-link">О проекте</a>
-            <a href="#" class="nav-link">Вики</a>
-            <a href="#" class="nav-link">Новости</a>
-        </nav>
-    </div>
-
-    <div class="header-controls">
-        <button class="theme-toggle" id="themeToggle">
-            <i class="fas fa-moon"></i>
-        </button>
-        <button class="discord-login-btn" onclick="loginWithDiscord()">
-            <i class="fab fa-discord"></i>
-            <span>Войти</span>
-        </button>
-    </div>
-</header>
-
-<main class="main-content">
-    <section class="hero-section">
-        <h1 class="hero-title">KETONAL</h1>
-        <p class="hero-subtitle">Уникальный Minecraft сервер с дружным сообществом и т.д</p>
-        <div class="server-ip">ket0nal.online</div>
-    </section>
+    <body>
+    <video autoplay muted loop playsinline class="background-video">
+        <source src="/src/background.mp4" type="video/mp4">
+    </video>
 
 
-    <section class="about-section" id = "about">
-        <h2 class="section-title">О проекте</h2>
-        <div class="about-content">
-            <div class="about-text">
-                <p>Добро пожаловать на Ketonal — уникальный Minecraft сервер, созданный с любовью к игре и
-                    комьюнити!</p>
-                <p>Наш сервер предлагает эксклюзивный игровой опыт с кастомными модами, тщательно проработанным лором и
-                    регулярными ивентами.</p>
-                <p>Мы стремимся создать дружелюбное и welcoming сообщество, где каждый игрок может найти себе занятие по
-                    душе: от строительства величественных замков до захватывающих PVP-сражений.</p>
-                <p>Присоединяйся к нам и стань частью этой удивительной вселенной!</p>
-
-            </div>
-        </div>
-    </section>
-</main>
-
-<footer class="footer">
-    <div class="footer-container">
-        <div class="footer-left">
+    <header class="header">
+        <div class="header-left">
             <div class="logo">
-                © 2025 Ketonal Project
+                <img src="/src/ketonal.png" alt="Ketonal Logo" class="logo-img">
             </div>
-            <div class="disclaimer">
-                Мы никак не связаны с Minecraft®, Mojang Studios® или Microsoft®.
+
+            <nav class="nav-menu">
+                <a href="#about" class="nav-link">О проекте</a>
+                <a href="#" class="nav-link">Вики</a>
+                <a href="#" class="nav-link">Новости</a>
+            </nav>
+        </div>
+
+        <div class="header-controls">
+            <button class="theme-toggle" id="themeToggle">
+                <i class="fas fa-moon"></i>
+            </button>
+            <button class="discord-login-btn" onclick="loginWithDiscord()">
+                <i class="fab fa-discord"></i>
+                <span>Войти</span>
+            </button>
+        </div>
+    </header>
+
+    <main class="main-content">
+
+        <section class="hero-section">
+            <h1 class="hero-title">KETONAL</h1>
+            <p class="hero-subtitle">Уникальный Minecraft сервер с дружным сообществом и т.д</p>
+        </section>
+
+
+        <section class="about-section" id="about">
+            <h2 class="section-title">О проекте</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>Добро пожаловать на Ketonal — уникальный Minecraft сервер, созданный с любовью к игре и
+                        комьюнити!</p>
+                    <p>Наш сервер предлагает эксклюзивный игровой опыт с кастомными модами, тщательно проработанным
+                        лором и
+                        регулярными ивентами.</p>
+                    <p>Мы стремимся создать дружелюбное и welcoming сообщество, где каждый игрок может найти себе
+                        занятие по
+                        душе: от строительства величественных замков до захватывающих PVP-сражений.</p>
+                    <p>Присоединяйся к нам и стань частью этой удивительной вселенной!</p>
+
+                </div>
+            </div>
+        </section>
+        <section class="about-section" id="about">
+            <h2 class="section-title">О проекте</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>Добро пожаловать на Ketonal — уникальный Minecraft сервер, созданный с любовью к игре и
+                        комьюнити!</p>
+                    <p>Наш сервер предлагает эксклюзивный игровой опыт с кастомными модами, тщательно проработанным
+                        лором и
+                        регулярными ивентами.</p>
+                    <p>Мы стремимся создать дружелюбное и welcoming сообщество, где каждый игрок может найти себе
+                        занятие по
+                        душе: от строительства величественных замков до захватывающих PVP-сражений.</p>
+                    <p>Присоединяйся к нам и стань частью этой удивительной вселенной!</p>
+
+                </div>
+            </div>
+        </section>
+        <section class="about-section" id="about">
+            <h2 class="section-title">О проекте</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>Добро пожаловать на Ketonal — уникальный Minecraft сервер, созданный с любовью к игре и
+                        комьюнити!</p>
+                    <p>Наш сервер предлагает эксклюзивный игровой опыт с кастомными модами, тщательно проработанным
+                        лором и
+                        регулярными ивентами.</p>
+                    <p>Мы стремимся создать дружелюбное и welcoming сообщество, где каждый игрок может найти себе
+                        занятие по
+                        душе: от строительства величественных замков до захватывающих PVP-сражений.</p>
+                    <p>Присоединяйся к нам и стань частью этой удивительной вселенной!</p>
+
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-left">
+                <div class="logo">
+                    © 2025 Ketonal Project
+                </div>
+                <div class="disclaimer">
+                    Мы никак не связаны с Minecraft®, Mojang Studios® или Microsoft®.
+                </div>
+            </div>
+            <div class="social-buttons">
+                <a class="social-btn discord-btn" href="https://discord.gg/YtrczGpanH" target="_blank">
+                    <svg viewBox="0 0 24 24">
+                        <path d="M14.82 4.26a10.14 10.14 0 0 0-.53 1.1 14.66 14.66 0 0 0-4.58 0 10.14 10.14 0 0 0-.53-1.1 16 16 0 0 0-4.13 1.3 17.33 17.33 0 0 0-3 11.59 16.6 16.6 0 0 0 5.07 2.59A12.89 12.89 0 0 0 8.23 18a9.65 9.65 0 0 1-1.71-.83 3.39 3.39 0 0 0 .42-.33 11.66 11.66 0 0 0 10.12 0q.21.18.42.33a10.84 10.84 0 0 1-1.71.84 12.41 12.41 0 0 0 1.08 1.78 16.44 16.44 0 0 0 5.06-2.59 17.22 17.22 0 0 0-3-11.59 16.09 16.09 0 0 0-4.09-1.35zM8.68 14.81a1.94 1.94 0 0 1-1.8-2 1.93 1.93 0 0 1 1.8-2 1.93 1.93 0 0 1 1.8 2 1.93 1.93 0 0 1-1.8 2zm6.64 0a1.94 1.94 0 0 1-1.8-2 1.93 1.93 0 0 1 1.8-2 1.92 1.92 0 0 1 1.8 2 1.92 1.92 0 0 1-1.8 2z"/>
+                    </svg>
+                </a>
+
+                <a class="social-btn youtube-btn">
+                    <svg viewBox="0 0 24 24">
+                        <path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/>
+                    </svg>
+                </a>
             </div>
         </div>
-        <div class="social-buttons">
-            <a class="social-btn discord-btn" href="https://discord.gg/YtrczGpanH" target="_blank">
-                <svg viewBox="0 0 24 24">
-                    <path d="M14.82 4.26a10.14 10.14 0 0 0-.53 1.1 14.66 14.66 0 0 0-4.58 0 10.14 10.14 0 0 0-.53-1.1 16 16 0 0 0-4.13 1.3 17.33 17.33 0 0 0-3 11.59 16.6 16.6 0 0 0 5.07 2.59A12.89 12.89 0 0 0 8.23 18a9.65 9.65 0 0 1-1.71-.83 3.39 3.39 0 0 0 .42-.33 11.66 11.66 0 0 0 10.12 0q.21.18.42.33a10.84 10.84 0 0 1-1.71.84 12.41 12.41 0 0 0 1.08 1.78 16.44 16.44 0 0 0 5.06-2.59 17.22 17.22 0 0 0-3-11.59 16.09 16.09 0 0 0-4.09-1.35zM8.68 14.81a1.94 1.94 0 0 1-1.8-2 1.93 1.93 0 0 1 1.8-2 1.93 1.93 0 0 1 1.8 2 1.93 1.93 0 0 1-1.8 2zm6.64 0a1.94 1.94 0 0 1-1.8-2 1.93 1.93 0 0 1 1.8-2 1.92 1.92 0 0 1 1.8 2 1.92 1.92 0 0 1-1.8 2z"/>
-                </svg>
-            </a>
+    </footer>
 
-            <a class="social-btn youtube-btn">
-                <svg viewBox="0 0 24 24">
-                    <path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/>
-                </svg>
-            </a>
-        </div>
-    </div>
-</footer>
+    <script>
+        document.getElementById('themeToggle').addEventListener('click', function () {
+            document.body.classList.toggle('light-theme');
+            const icon = this.querySelector('i');
 
-<script>
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function (e) {
-            e.preventDefault();
-
-            const targetId = this.getAttribute('href');
-            if (targetId === '#') return;
-
-            const targetElement = document.querySelector(targetId);
-            if (targetElement) {
-                window.scrollTo({
-                    top: targetElement.offsetTop - 100,
-                    behavior: 'smooth'
-                });
+            if (document.body.classList.contains('light-theme')) {
+                icon.classList.remove('fa-moon');
+                icon.classList.add('fa-sun');
+            } else {
+                icon.classList.remove('fa-sun');
+                icon.classList.add('fa-moon');
             }
         });
-    });
 
-</script>
-</body>
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+
+                const targetId = this.getAttribute('href');
+                if (targetId === '#') return;
+
+                const targetElement = document.querySelector(targetId);
+                if (targetElement) {
+                    window.scrollTo({
+                        top: targetElement.offsetTop - 100,
+                        behavior: 'smooth'
+                    });
+                }
+            });
+        });
+        window.addEventListener('scroll', function () {
+            const scrollPosition = window.scrollY;
+            const video = document.querySelector('.background-video');
+            const blurIntensity = Math.min(scrollPosition / 200, 30);
+            video.style.filter = `blur(${blurIntensity}px)`;
+
+
+        });
+
+    </script>
+    </body>
+</div>
 </html>
