--- a/index.html
+++ b/index.html
@@ -60,61 +60,87 @@
         </section>
 
 
-        <section class="about-section" id="about">
-            <h2 class="section-title">О проекте</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>Добро пожаловать на Ketonal — уникальный Minecraft сервер, созданный с любовью к игре и
-                        комьюнити!</p>
-                    <p>Наш сервер предлагает эксклюзивный игровой опыт с кастомными модами, тщательно проработанным
-                        лором и
-                        регулярными ивентами.</p>
-                    <p>Мы стремимся создать дружелюбное и welcoming сообщество, где каждый игрок может найти себе
-                        занятие по
-                        душе: от строительства величественных замков до захватывающих PVP-сражений.</p>
-                    <p>Присоединяйся к нам и стань частью этой удивительной вселенной!</p>
-
+        <section id="about">
+            <h1 class="section-title">О проекте</h1>
+            <div class="cards-container">
+                <div class="glass-card">
+                    <i class="fas fa-users"></i>
+                    <h3>Дружное сообщество</h3>
+                    <p>Наш сервер объединяет людей, которые любят Minecraft и ценят хорошую компанию. Мы заботимся о
+                        том, чтобы каждый игрок чувствовал себя частью нашего сообщества.</p>
+                </div>
+                <div class="glass-card">
+                    <i class="fas fa-cube"></i>
+                    <h3>Уникальные моды</h3>
+                    <p>Мы разработали эксклюзивные модификации, которые превращают обычный геймплей в нечто особенное.
+                        Откройте для себя новые возможности в знакомом мире!</p>
+                </div>
+                <div class="glass-card">
+                    <i class="fas fa-dragon"></i>
+                    <h3>Проработанный лор</h3>
+                    <p>Погрузитесь в глубокую и захватывающую историю нашего сервера. Каждый элемент мира имеет свою
+                        историю и значение в общем повествовании.</p>
                 </div>
             </div>
-        </section>
-        <section class="about-section" id="about">
-            <h2 class="section-title">О проекте</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>Добро пожаловать на Ketonal — уникальный Minecraft сервер, созданный с любовью к игре и
-                        комьюнити!</p>
-                    <p>Наш сервер предлагает эксклюзивный игровой опыт с кастомными модами, тщательно проработанным
-                        лором и
-                        регулярными ивентами.</p>
-                    <p>Мы стремимся создать дружелюбное и welcoming сообщество, где каждый игрок может найти себе
-                        занятие по
-                        душе: от строительства величественных замков до захватывающих PVP-сражений.</p>
-                    <p>Присоединяйся к нам и стань частью этой удивительной вселенной!</p>
 
+            <h2 class="section-title">Таймлайн создания проекта</h2>
+
+            <div class="vertical-timeline">
+                <div class="timeline-dots">
+                    <div class="timeline-dot active" data-index="0"></div>
+                    <div class="timeline-dot" data-index="1"></div>
+                    <div class="timeline-dot" data-index="2"></div>
+                    <div class="timeline-dot" data-index="3"></div>
+                </div>
+
+                <div class="timeline-line"></div>
+
+                <div class="timeline-content">
+                    <div class="timeline-slides">
+                        <div class="timeline-slide active">
+                            <div class="timeline-item">
+
+                                <h3>Основание проекта</h3>
+                                <p>ыыыыыыыыыыыыыыыыыыы</p>
+                            </div>
+                        </div>
+                        <div class="timeline-slide">
+                            <div class="timeline-item">
+                                <h3>Разработка плагинов</h3>
+                                <p>ыыыыыыыыыыыыыыыыыыы</p>
+                            </div>
+                        </div>
+                        <div class="timeline-slide">
+                            <div class="timeline-item">
+                                <h3>Разработка плагинов</h3>
+                                <p>ыыыыыыыыыыыыыыыыыыы</p>
+                            </div>
+                        </div>
+                        <div class="timeline-slide">
+                            <div class="timeline-item">
+                                <h3>Разработка плагинов</h3>
+                                <p>ыыыыыыыыыыыыыыыыыыы</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="timeline-nav">
+                    <button class="timeline-nav-btn prev-btn" disabled>
+                        <i class="fas fa-chevron-up"></i>
+                    </button>
+                    <button class="timeline-nav-btn next-btn">
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
                 </div>
             </div>
-        </section>
-        <section class="about-section" id="about">
-            <h2 class="section-title">О проекте</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>Добро пожаловать на Ketonal — уникальный Minecraft сервер, созданный с любовью к игре и
-                        комьюнити!</p>
-                    <p>Наш сервер предлагает эксклюзивный игровой опыт с кастомными модами, тщательно проработанным
-                        лором и
-                        регулярными ивентами.</p>
-                    <p>Мы стремимся создать дружелюбное и welcoming сообщество, где каждый игрок может найти себе
-                        занятие по
-                        душе: от строительства величественных замков до захватывающих PVP-сражений.</p>
-                    <p>Присоединяйся к нам и стань частью этой удивительной вселенной!</p>
 
-                </div>
-            </div>
+
         </section>
+
 
     </main>
 
-    <footer class="footer">
+    <footer class="footer mtop-10">
         <div class="footer-container">
             <div class="footer-left">
                 <div class="logo">
@@ -170,16 +196,68 @@
                 }
             });
         });
+
         window.addEventListener('scroll', function () {
             const scrollPosition = window.scrollY;
             const video = document.querySelector('.background-video');
             const blurIntensity = Math.min(scrollPosition / 200, 30);
             video.style.filter = `blur(${blurIntensity}px)`;
-
-
         });
-
     </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const slides = document.querySelectorAll('.timeline-slide');
+            const dots = document.querySelectorAll('.timeline-dot');
+            const prevBtn = document.querySelector('.prev-btn');
+            const nextBtn = document.querySelector('.next-btn');
+            const progress = document.querySelector('.progress');
+            let currentIndex = 0;
+            const totalSlides = slides.length;
+
+            function updateSlider() {
+                slides.forEach(slide => {
+                    slide.classList.remove('active');
+                });
+                slides[currentIndex].classList.add('active');
+                dots.forEach((dot, index) => {
+                    dot.classList.toggle('active', index === currentIndex);
+                });
+                prevBtn.disabled = currentIndex === 0;
+                nextBtn.disabled = currentIndex === totalSlides - 1;
+                progress.style.width = `${((currentIndex + 1) / totalSlides) * 100}%`;
+            }
+
+            prevBtn.addEventListener('click', () => {
+                if (currentIndex > 0) {
+                    currentIndex--;
+                    updateSlider();
+                }
+            });
+            nextBtn.addEventListener('click', () => {
+                if (currentIndex < totalSlides - 1) {
+                    currentIndex++;
+                    updateSlider();
+                }
+            });
+            dots.forEach(dot => {
+                dot.addEventListener('click', () => {
+                    currentIndex = parseInt(dot.getAttribute('data-index'));
+                    updateSlider();
+                });
+            });
+            document.addEventListener('keydown', (e) => {
+                if (e.key === 'ArrowUp' && currentIndex > 0) {
+                    currentIndex--;
+                    updateSlider();
+                } else if (e.key === 'ArrowDown' && currentIndex < totalSlides - 1) {
+                    currentIndex++;
+                    updateSlider();
+                }
+            });
+            updateSlider();
+        });
+    </script>
+
     </body>
 </div>
 </html>
