play section add

--- a/index.html
+++ b/index.html
@@ -136,7 +136,28 @@
 
 
         </section>
+        <h2 class="section-title">Начни играть с нами сейчас!</h2>
 
+        <section class="play-section">
+            <div class="play-content">
+                <div class="play-text">
+                    <p>Добро пожаловать на Ketonal — уникальный Minecraft сервер, созданный с любовью к игре и
+                        комьюнити!</p>
+                    <p>Наш сервер предлагает эксклюзивный игровой опыт с кастомными модами, тщательно проработанным
+                        лором и
+                        регулярными ивентами.</p>
+                    <p>Мы стремимся создать дружелюбное и welcoming сообщество, где каждый игрок может найти себе
+                        занятие по
+                        душе: от строительства величественных замков до захватывающих PVP-сражений.</p>
+                    <p>Присоединяйся к нам и стань частью этой удивительной вселенной!</p>
+
+                </div>
+                <iframe src="https://discord.com/widget?id=1404399761032872038&theme=dark" width="350" height="500"
+                        allowtransparency="true" frameborder="0"
+                        sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            </div>
+
+        </section>
 
     </main>
 
